Se agrega contenedores de microfrontend con tamaño completo de body

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -80,6 +80,8 @@
   <script>
     System.import('@CBT/root-config');
   </script>
+  <div id="single-spa-application:@CB-ANG" style="width: 100%; height: 100%;"></div>
+  <div id="single-spa-application:@CB-REA" style="width: 100%; height: 100%;"></div>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
 </body>
 </html>
