--- a/src/index.ejs
+++ b/src/index.ejs
@@ -74,14 +74,24 @@
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/amd.min.js"></script>
   <% } %>
+
+  <style>
+    div[id="single-spa-application:@CB-ANG"] {
+      width: 100%; 
+      height: 100%;
+    }
+
+    div[id="single-spa-application:@CB-REA"] {
+      width: 100%; 
+      height: 100%;
+    } 
+  </style>
 </head>
 <body>
   <main></main>
   <script>
     System.import('@CBT/root-config');
   </script>
-  <div id="single-spa-application:@CB-ANG" style="width: 100%; height: 100%;"></div>
-  <div id="single-spa-application:@CB-REA" style="width: 100%; height: 100%;"></div>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
 </body>
 </html>
